perf(event-log): remove DTO conversion N+1 query